--- a/week1/1-6.html
+++ b/week1/1-6.html
@@ -14,11 +14,12 @@
 		font-weight:200;
 	}
 	#filters {
-		width:50%;
-		margin: 0 auto;
+		display: flex;
+	  	align-items: center;
+	  	justify-content: center;
 	}
 	#filters div {
-		width:25%;
+		max-width:50%;
 		padding:5%;
 	/*	background-color:#F2F2F2;*/
 		margin:2%;
