--- a/week1/1-7.html
+++ b/week1/1-7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Filter and display data based on user input</title>
+	<title>Adding simple microanimation to webapps</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 
