--- a/week1/1-5.html
+++ b/week1/1-5.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Filter and display data based on user input</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<meta name="viewport" content="width=device-width">
 </head>
 
 <style type="text/css">
