--- a/week1/1-6.html
+++ b/week1/1-6.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Create and display DOM elements from dynamic data</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<meta name="viewport" content="width=device-width">
 </head>
 
 <style type="text/css">
