--- a/week3/3-5.html
+++ b/week3/3-5.html
@@ -4,16 +4,25 @@
 	<title>css grid columns and rows</title>
 </head>
 <style type="text/css">
-	body {
+	html, body {
 		top:0;
 		left:0;
 		margin:0;
+		font-family:'Helvetica Neue', sans-serif;
 	}
 	.wrapper {
 	    display: grid;
 	    grid-gap: 0.5em;
 	    grid-template-columns: 33% 33% 33%;
-	    grid-template-rows: 50vh 50vh;
+	    grid-template-rows: 25vh 25vh;
+	    background-color: #fff;
+	    color: #444;
+	    }
+	.wrapper2 {
+	    display: grid;
+	    grid-gap: 2%;
+	    grid-template-columns: 33% 33% 33%;
+	    grid-template-rows: 25vh 25vh;
 	    background-color: #fff;
 	    color: #444;
 	    }
@@ -43,14 +52,20 @@
 </style>
 <body>
 
-
+<h1>Do: Use ems for grid spacing</h1>
 <div class="wrapper">
   <div class="box a">A</div>
   <div class="box b">B</div>
   <div class="box c">C</div>
   <div class="box d">D</div>
 </div>
-
+<h1>Don't: Use %s for grid spacing</h1>
+<div class="wrapper2">
+  <div class="box a">A</div>
+  <div class="box b">B</div>
+  <div class="box c">C</div>
+  <div class="box d">D</div>
+</div>
 
 </body>
 </html>
