--- a/week4/4-3/template.html
+++ b/week4/4-3/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Adding simple microanimation to behaviors</title>
+	<title>Search SPA template</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta name="viewport" content="width=device-width">
