--- a/week6/6-3.html
+++ b/week6/6-3.html
@@ -30,9 +30,7 @@ body {
 	border-right: .1em solid grey; 
 	white-space: nowrap; 
 	margin: 0 auto; 
-	animation: 
-	typing 2s steps(25, end),
-	blink-caret .75s step-end infinite;
+	animation: typing 2s steps(25, end), blink-caret .75s step-end infinite;
 }
 
 @keyframes typing {
@@ -45,6 +43,31 @@ body {
   50% { border-color: grey; }
 }
 
+#start {
+	position:fixed;
+	background-color:#2196F3;
+	text-align:center;
+	padding:2% 5%;
+	width:10%;
+	height:5%;
+	left:40%;
+	top:80%;
+	color:white;
+	border-radius:0.1em;
+	font-size:1.5em;
+	cursor:pointer;
+	overflow-y:scroll;
+	transition: 1s cubic-bezier(0.23, 1, 0.32, 1);
+}
+#start:hover {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	padding:0%;
+}
+
 </style>
 <body>
 
@@ -54,6 +77,10 @@ body {
 		<div class="typewriter">
   			<h1>Let's animate!</h1>
 		</div>
+	</div>
+
+	<div class='item'>
+		<div id='start'>start</div>
 	</div>
 
 </div>
