--- a/week6/6-4.html
+++ b/week6/6-4.html
@@ -205,6 +205,11 @@ body {
 				opacity:1
 			}
 		}
+		@media all and (max-width:767px){
+			:host {
+				width:90%;
+			}
+		}
 		</style>
 		<slot></slot>
 		<slot name="event-name"><h1 slot="event-name">event name</h1></slot>
