--- a/week1/1-3.html
+++ b/week1/1-3.html
@@ -13,7 +13,7 @@
   // Run the function and send the result to body 
   mysentence = sentence(str1, str2)
   body = document.querySelector('body')
-  body.innerHTML = mysentence
+  body.innerHTML = "<h1>"+mysentence+"</h1>"
 </script>
 
 </html>
